[gd_scene load_steps=4 format=3 uid="uid://dfsftxrmeot0l"]

[ext_resource type="Theme" uid="uid://bbuwnlm1mjl3" path="res://ui/theme_tutorial.tres" id="1_ls38r"]
[ext_resource type="StyleBox" uid="uid://tpmdlyg2feff" path="res://ui/writing_stylebox.tres" id="2_aa5yw"]
[ext_resource type="Script" uid="uid://bdunohvn7pdia" path="res://ui/tutorial_explanation.gd" id="2_v6ufp"]

[node name="ExplanationMargin" type="MarginContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -416.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
mouse_filter = 2
theme = ExtResource("1_ls38r")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("2_v6ufp")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2

[node name="ExplanationPanel" type="Panel" parent="PanelContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2

[node name="ExplanationContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="ExplanationContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_aa5yw")

[node name="Panel" type="Panel" parent="ExplanationContainer/PanelContainer"]
show_behind_parent = true
layout_mode = 2

[node name="TutorialLabel" type="Label" parent="ExplanationContainer/PanelContainer"]
layout_mode = 2
text = "Explanation on how to
accomplish Objective 1"
horizontal_alignment = 1
paragraph_separator = "\\"

[node name="PanelContainer2" type="PanelContainer" parent="ExplanationContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_aa5yw")

[node name="Panel" type="Panel" parent="ExplanationContainer/PanelContainer2"]
show_behind_parent = true
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="ExplanationContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ExplanationContainer/PanelContainer2/ButtonContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_aa5yw")

[node name="Panel" type="Panel" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer"]
show_behind_parent = true
layout_mode = 2

[node name="QuitTutorialButton" type="Button" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Quit Tutorial"

[node name="PanelContainer2" type="PanelContainer" parent="ExplanationContainer/PanelContainer2/ButtonContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_aa5yw")

[node name="Panel" type="Panel" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer2"]
show_behind_parent = true
layout_mode = 2

[node name="HideExplanationButton" type="Button" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Minimize"

[node name="PanelContainer3" type="PanelContainer" parent="ExplanationContainer/PanelContainer2/ButtonContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_aa5yw")

[node name="Panel" type="Panel" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer3"]
show_behind_parent = true
layout_mode = 2

[node name="ShowExplanationButton" type="Button" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer3"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Show Explanation"

[node name="PanelContainer4" type="PanelContainer" parent="ExplanationContainer/PanelContainer2/ButtonContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_aa5yw")

[node name="Panel" type="Panel" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer4"]
show_behind_parent = true
layout_mode = 2

[node name="PrevButton" type="Button" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer4"]
layout_mode = 2
size_flags_horizontal = 0
text = "Previous Step"

[node name="PanelContainer5" type="PanelContainer" parent="ExplanationContainer/PanelContainer2/ButtonContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_aa5yw")

[node name="Panel" type="Panel" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer5"]
show_behind_parent = true
layout_mode = 2

[node name="NextButton" type="Button" parent="ExplanationContainer/PanelContainer2/ButtonContainer/PanelContainer5"]
layout_mode = 2
size_flags_horizontal = 0
text = "Next Step"
